2003-03-11  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXMenu.c (EventuallyInvokeMenu): New function,
	used to invoke menu commands at idle time.
	(TkMacOSXDispatchMenuEvent): Don't immediately dispatch menu
	commands, wait till the idle loop to do so.  This is more like
	what is done on Windows, and avoids the crash from destroying
	a menu in it's command.

	* macosx/tkMacOSXHLEvents.c (ReallyKillMe): Don't force the shell
	to exit.  According to the OS X HI guidelines, it should be
	possible to cancel an attempt to quit, and if we force the kill,
	here, it would not be possible to implement this.
	
2003-03-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/unixWm.test: Add the testwrapper
	constraint to tests that depend on the
	testwrapper command. These tests should
	not be run under Windows for example.

2003-03-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* doc/wm.n (minimize, maximize): Remove claim
	that the resizable command keeps scripts from
	changing the size of windows since it is
	not true. The resizable command only applies
	to user sizing via user interaction.
	* tests/unixWm.test: Replace broken tests with
	the nonPortable constraint with new tests for
	maxsize and minsize options. These tests
	verify that setting the minsize and maxsize
	will resize the window if needed, and that
	the wm hints will be updated with the new sizes.
	* tests/wm.test: Add an exhaustive set of tests
	for the wm maxsize and wm minsize commands.
	These tests verify that setting the minsize
	and maxsize will resize the window if needed.
	These tests have only been run under Win98
	and Window Maker under Linux, so further tweaking
	may be needed for other systems.
	* unix/tkUnixWm.c (UpdateGeometryInfo, UpdateSizeHints):
	Fixup comments and initialization for the minWidth,
	minHeight, maxWidth, maxHeight, width, and height
 	members of the WmInfo struct. Check to ensure
	that a new toplevel window size is not larger